# ising-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  KNOWLEDGE_BASE.md  README.md  build.rs  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
analysis/: REPRODUCIBILITY.md  coarsening.ipynb  fit_j.ipynb  fss.ipynb  heisenberg_fss.ipynb  heisenberg_jfit.ipynb  kz.ipynb  ml_phase.ipynb  pub_style.py  requirements-ci.txt  requirements.txt  three_way_comparison.ipynb  validation.ipynb  xy_fss.ipynb  xy_jfit.ipynb
analysis/data/: README.md
analysis/graphs/: bcc_N10.json  bcc_N12.json  bcc_N4.json  bcc_N6.json  bcc_N8.json  diluted_N20_p00.json  diluted_N20_p10.json  diluted_N20_p30.json  diluted_N20_p50.json  fcc_N10.json  fcc_N12.json  fcc_N4.json  fcc_N6.json  fcc_N8.json  gen_bcc.py  gen_diluted.py  gen_fcc.py
analysis/scripts/: README.md  analyze_gpu_fss.py  analyze_heisenberg_anisotropy.py  (+15 more)
docs/: ELI5.md  gallery.md  index.html  ising-mesh-design.md  ising-research-notes.md  main.js  paper-literature-notes.md  physics-validation.md  reproducibility.md  setup.md  showcase.html  submission-checklist.md  worker.js
paper/: build.sh  draft.tex  references.bib
scripts/: benchmark_msc.sh  bootstrap_analysis.py  run_all_publication.sh  run_fss_publication.ps1  run_fss_publication.sh  run_gpu_publication.sh  run_gpu_windows_pipeline.py  run_heisenberg_publication.sh  run_jfit_publication.sh  run_kz_publication.sh  run_v2.sh  run_xy_publication.sh
src/: cli.rs  coarsening.rs  fitting.rs  fss.rs  graph.rs  kibble_zurek.rs  lattice.rs  lib.rs  metropolis.rs  observables.rs  parallel_tempering.rs  sweep.rs  wasm.rs  wolff.rs
tests/: cli.rs  gpu_parity.rs
www/: main.js
(+176 files in other folders)
