[package]
name = "ising-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[lib]
name = "ising"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
wasm-bindgen = "0.2"

# getrandom needs the js feature to work in wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
