[package]
name = "ising-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["Connor Faulkner <connorjfaulkner@gmail.com>"]
description = "Monte Carlo simulation of the Ising model with Wolff cluster algorithm, GPU acceleration, and finite-size scaling analysis"
license = "MIT"
repository = "https://github.com/faulknco/ising-rs"
keywords = ["ising", "monte-carlo", "physics", "phase-transition", "wolff"]
categories = ["science", "simulation"]

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[[bin]]
name = "kz"
path = "src/bin/kz.rs"

[[bin]]
name = "mesh_sweep"
path = "src/bin/mesh_sweep.rs"

[lib]
name = "ising"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
wasm-bindgen = "0.2"
anyhow = "1"

[dependencies.cudarc]
version = "0.19"
optional = true
features = ["cuda-12060"]

[features]
cuda = ["dep:cudarc"]

# getrandom needs the js feature to work in wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
